[package]
name = "uproc"
version = "0.1.0"
authors = ["Maxim Kosterov <maxim.kosterov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.53"
quote = "1.0.7"
darling = "0.10.2"
proc-macro2 = "1.0.24"